// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check :hover selectors 1`] = `
"({
  ':hover': {
    'color': '#e3342f',
    'borderColor': '#9561e2'
  }
});"
`;

exports[`Check screen size :hover selectors 1`] = `
"({
  '@media (min-width: 768px)': {
    ':hover': {
      'color': '#e3342f',
      'borderColor': '#ffed4a'
    }
  },
  '@media (min-width: 992px)': {
    ':hover': {
      'borderColor': '#9561e2'
    }
  }
});"
`;

exports[`Check screen size selectors 1`] = `
"({
  '@media (min-width: 576px)': {
    'color': '#9561e2'
  },
  '@media (min-width: 768px)': {
    'color': '#e3342f',
    'borderColor': '#9561e2'
  }
});"
`;

exports[`Check selectors 1`] = `
"({
  'color': '#e3342f'
});"
`;

exports[`Check various types of selectors 1`] = `
"({
  'width': '83.33333%',
  'borderTopLeftRadius': '9999px',
  'borderTopRightRadius': '9999px',
  'color': '#e3342f',
  ':hover': {
    'color': '#9561e2',
    'borderColor': '#e3342f'
  },
  '@media (min-width: 576px)': {
    ':hover': {
      'color': '#3490dc',
      'borderColor': '#222b2f'
    },
    'borderColor': '#e3342f'
  },
  '@media (min-width: 768px)': {
    ':hover': {
      'width': '33.33333%'
    }
  }
});"
`;
